--- a/my_works/flats_rents/index.html
+++ b/my_works/flats_rents/index.html
@@ -41,7 +41,7 @@
         <!--квартира 1-->
         <li class="flat">
           <div class="price">7000 &#x20bd;</div>
-          <img src="/flatsrent/img/flats/01.jpg" alt="фото квартиры 7000 &#8381">
+          <img src="img/flats/01.jpg" alt="фото квартиры 7000 &#8381">
             <div class="base-desc">
               <div class="rooms">1-комнатная</div>
               <div class="address">Лиговский пр-т, 130</div>
