--- a/my_homeworks/glo_academy/L13/index.html
+++ b/my_homeworks/glo_academy/L13/index.html
@@ -14,11 +14,11 @@
     <div class="form-body">
       <h2 class="form-header"><span>create an account</span></h2>
       <form action="#" method="">
-        <label for="email">Email:<span class="star"> *</span></label><br>
+        <label for="email">Email:<span class="star"> *</span></label>
         <input class="email" type="email" name="email" value="" placeholder="johnsmith@gmail.com">
-        <label for="pass">Choose Password<span class="star"> *</span></label><br>
+        <label for="pass">Choose Password<span class="star"> *</span></label>
         <input class="pass" type="password" name="password">
-        <label for="conf-pass">Confirm Password<span class="star"> *</span></label><br>
+        <label for="conf-pass">Confirm Password<span class="star"> *</span></label>
         <input class="conf-pass" type="password" name="password" value="">
         <button class="btn" type="submit" value="register now!">register now!</button>
       </form>
