update ады course
fix index.html fls 05

--- a/my_homeworks/fls/05_css_1/css_1/index.html
+++ b/my_homeworks/fls/05_css_1/css_1/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<!-- <link rel="stylesheet" href="css/fls_reset.css"> -->
 	<link rel="stylesheet" href="css/header_style.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<!-- <link rel="stylesheet" href="css/styles.css"> -->
 	<title>CSS синтаксис. Обнуление CSS стилей. Урок №5</title>
 	</head>
 	<body>
@@ -14,7 +14,7 @@
 				<nav>
 					 <a href="index.html">Главная</a>
 					 <a href="practice.html">Урок</a>
-					 <a href="homework.html">Домашнее задание</a>
+					 <!-- <a href="homework.html">Домашнее задание</a> -->
 				</nav>
 			</header>
 
