--- a/my_homeworks/fls/05_css_1/css_1/practice.html
+++ b/my_homeworks/fls/05_css_1/css_1/practice.html
@@ -5,9 +5,9 @@
     <!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
     <head>
       <!-- Заголовок страницы в браузере -->
-      <!-- <link rel="stylesheet" href="css/fls_reset.css"> -->
-      <link rel="stylesheet" href="css/header_style.css">
-      <link rel="stylesheet" href="css/styles.css">
+      <!-- <link rel="stylesheet" href="css/header_style.css"> -->
+      <link rel="stylesheet" href="css/fls_reset.css">
+      <!-- <link rel="stylesheet" href="css/styles.css"> -->
       <title>Знакомство с HTML тенами. Часть №3 (Формы) - практика</title>
       <!-- Кодировка страницы -->
       <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
@@ -20,69 +20,22 @@
 				<nav>
 					 <a href="index.html">Главная</a>
 					 <a href="practice.html">Урок</a>
-					 <a href="homework.html">Домашнее задание</a>
+					 <!-- <a href="homework.html">Домашнее задание</a> -->
 				</nav>
 			</header>
 
-      <form action="#" method="GET">
-        <div>
-          <p>Имя</p>
-          <input placeholder="Имя" tabindex="1" type="text" name="username">
-        </div>
-        <div>
-          <p>Пароль</p>
-          <input placeholder="Пароль" tabindex="2" type="password" name="password">
-        </div>
-        <div>
-          <p>Телефон</p>
-          <input placeholder="Телефон" tabindex="3" type="tel" name="user_phone">
-        </div>
-        <div>
-          <p>Пол</p>
-          <div>
-            <input checked tabindex="4" type="radio" name="gender" value="male"> Мужской
-          </div>
-          <div>
-            <input tabindex="4" type="radio" name="gender" value="female"> Женский
-          </div>
-        </div>
-        <div>
-          <p>Имущество</p>
-          <div>
-            <input tabindex="5" checked type="checkbox" name="bike" value="yes"> Велик
-          </div>
-          <div>
-            <input tabindex="6" type="checkbox" name="car" value="yes"> Машина
-          </div>
-          <div>
-            <input tabindex="7" disabled type="checkbox" name="bike" value="yes"> Дом
-          </div>
-        </div>
-        <div>
-          <p>Дополнительная информация</p>
-          <div>
-            <textarea tabindex="8" name="text"></textarea>
-          </div>
-        </div>
-        <div>
-          <p>Прикрепить фото</p>
-          <div>
-            <input tabindex="9" type="file" name="foto">
-          </div>
-        </div>
-        <div>
-        <p>Любимый цвет</p>
-          <select tabindex="10" name="color_select">
-            <option value="red">Красный</option>
-            <option value="green">Зеленый</option>
-            <option selected value="yellow">Желтый</option>
-          </select>
-        </div>
-        <div>
-          <p>Действия</p>
-          <button type="submit">Отправить</button>
-          <button type="reset">Очистить</button>
-        </div>
-      </form>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis amet quam aut. Recusandae aliquid magnam, qui ipsam inventore atque rerum asperiores beatae ex doloremque expedita? Est nostrum quidem facere?
+			</p>
+			<p>
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet recusandae exercitationem quas reiciendis eius ipsum.
+			</p>
+			<ul>
+				<li>Text</li>
+				<li>Text</li>
+				<li>Text</li>
+			</ul>
+			<h2>Text</h2>
+      
     </body>
   </html>
