--- a/my_homeworks/fls/09_css_5/css_5/homework.html
+++ b/my_homeworks/fls/09_css_5/css_5/homework.html
@@ -8,7 +8,7 @@
 </head>
   <body>
              
-    <!-- <header>
+    <header>
       <h1>CSS. Часть №5 (Свойство background)</h1>
       <nav>
         <ul>
@@ -16,7 +16,8 @@
           <li><a href="homework.html">Домашнее задание</a></li>
         </ul>
       </nav>
-    </header> -->
+    </header>
+    
     <section class="content">
 
       <p class="logo-text">Travel</p>
