--- a/my_homeworks/fls/09_css_5/css_5/homework.html
+++ b/my_homeworks/fls/09_css_5/css_5/homework.html
@@ -17,7 +17,6 @@
         </ul>
       </nav>
     </header>
-    
     <section class="content">
 
       <p class="logo-text">Travel</p>
@@ -37,13 +36,13 @@
       </div>
 
       <ul class="we-do">
-        <li class="put_on">Put on this page information about your product</li>
-        <li class="detailed">A detailed description of your product</li>
-        <li class="tell_us">Tell us about the advantages and merits</li>
-        <li class="associate">Associate the page with the payment system</li>
+        <li>Put on this page information about your product</li>
+        <li>A detailed description of your product</li>
+        <li>Tell us about the advantages and merits</li>
+        <li><span>Associate the page with the payment system</span></li>
       </ul>
 
-      <a href="#" class="btn-story">Full Story</a>
+      <a href="#" class="btn-story"><span>Full Story</span></a>
 
     </section>
 
