--- a/my_homeworks/fls/13_hellosass/hellosass/homework_v2.html
+++ b/my_homeworks/fls/13_hellosass/hellosass/homework_v2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-  <link rel="stylesheet" href="../css/style_homework_v2.css">
+  <link rel="stylesheet" href="css/style_homework_v2.css">
   <title></title>
 </head>
   <body>
