update css & html
fix problem with path

--- a/my_homeworks/fls/13_hellosass/hellosass/homework.html
+++ b/my_homeworks/fls/13_hellosass/hellosass/homework.html
@@ -24,7 +24,7 @@
 			<h1 class="title">Donec sed odio dui. Cras mattis consectetur purus sit amet fermentum.</h1>
 		</div>
 		<div class="content-image">
-			<img class="image" src="../img/for_homework/image.jpg" alt="картинка">
+			<img class="image" src="img/for_homework/image.jpg" alt="картинка">
 		</div>
 		<div class="text">
 			<p>
